2014-11-26 John Wu <John dot Wu at ACM dot org>
	* examples/ardea.cpp: invoke tablex::setASCIIDictionary to make
	use of the user supplied dictionary file
	* tests/Makefile.am: add test cases 13, 14 and 15 to exercise the
	text data with external ASCII dictionaries

2014-11-24 John Wu <John dot Wu at ACM dot org>
	* doc/footer.html: fix path to cowboy1a.gif
	* examples/thula.cpp: remove -q option, add explanation of -x
	option, per suggestion from Jon Strabala
	* examples/ibis.cpp: streamline output option to ensure the
	existing content of the output file is cleared before running any
	queries, this option leaves the output file empty when query
	operations encounter any error (suggested by Jon Strabala)

2014-11-19 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: add test cases based on input from Jon
	Strabala

2014-11-10 Jon Strabala <jon dot strabala at quantumsi dot com>
	* src/whereParser.yy: addressing the issue with tm_mday being left
	as 0 by the conversion functions

2014-11-07 John Wu <John dot Wu at ACM dot org>
	* COPYING: replace the license with the 3-clause BSD
	* configure.ac: mark the current soruce code as 2.0.0

2014-11-03 John Wu <John dot Wu at ACM dot org>
	* src/ifade.cpp, src/ixpack.cpp, src/ixpale.cpp, src/ixzone.cpp:
	add statement to log conditions leading to error code -13 to
	debug a problem reported by Fasika Daksa
	* src/whereParser.yy:1195 initialize tm_isdst to -1 to tell mktime
	to figure out whether DST is in effect (a solution found by Jon
	Strabala)
	* test/Makefile.am: add test case check-js2 based on examples from
	Jon Strabala

2014-11-01 John Wu <John dot Wu at ACM dot org>
	* src/whereParser.yy: update TO_UNIXTIME_LOCAL and TO_UNIXTIME_GMT
	based on suggestion from Jon Strabala
	* src/table.h, src/tafel.h, src/tafel.cpp: add functions
	getASCIIDictionary and setASCIIDictionary

2014-10-29 John Wu <John dot Wu at ACM dot org>
	* src/whereLexer.ll, src/whereParser.yy: change TO_UNIXTIME_LOCAL